# triton-co-pilot

./: README.md  pyproject.toml  reference.md
triton_copilot/: build_services.py  constants.py  init_services.py  main.py  run_services.py  triton_services.py  utils.py  validate.py
triton_copilot/template/: Dockerfile
triton_copilot/template/1/: app.py  model.py
